@@ -10,9 +10,6 @@ public:
   void Load(const CStdString& strSkinDir); // load the skin.xml file if it exists, and configure our directories etc.
   bool Check(const CStdString& strSkinDir); // checks if everything is present and accounted for without loading the skin
   
-  //GeminiServer Read seperate Skin Informations!
-  bool ReadElement(const CStdString strSkinDir, CStdString strElement, CStdString& strElementValue);
-
   CStdString GetSkinPath(const CStdString& strFile, RESOLUTION *res);  // retrieve the best skin file for the resolution we are in - res will be made the resolution we are loading from
   wchar_t* GetCreditsLine(int i);
 
