@@ -5,6 +5,14 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 23-11-2005 fixed:   Removed invalid .jpg files from CVS.
+ - 23-11-2005 changed: Default album cover in skin is now "defaultAlbumCover.png"
+ - 23-11-2005 changed: Added flag to directory classes to specify whether they should prompt the user
+                       for authentication. Background scanners (picture thumb loader, RAM control) turn
+                       this flag off.
+ - 23-11-2005 changed: Redid the skin theme code.  See the online manual for information on skin themes.
+ - 23-11-2005 fixed: Buttonscroller didn't obey visibility conditions.
+ - 23-11-2005 added: <randomize> and <keepaspectratio> tags to the multiimage control.
  - 21-11-2005 added: you can now specify where to store playlists. they are now separated in video and music sections.
  - 21-11-2005 fixed: delete in my video title view renamed to remove title to avoid confusion. also removed a file-level operation (rename file) from the title view context menu.
  - 21-11-2005 fixed: somehow a hack for dvd menu's was removed from the dvdplayer. Added it back again
